Update about page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: normal
-title: About
+title: About hackathon x
 color: "#ff5b00"
 bg_url: "/assets/images/shapes/Form1_orange_transparent.svg"
 bg_position: "80vw 10vh"
@@ -8,6 +8,16 @@ bg_position: "80vw 10vh"
 <header class="content-siteheader">
 	<h1>{{ page.title }}</h1>
 </header>
+
+<div class="section-text colored">
+    hackathon x is part of the Creative Collections project, which is dedicated to opening the Badisches Landesmuseum to participation by its users and developing new digital concepts. Since the museum visit should also be entertaining and fun, the focus of the hackathon is on gaming in the museum. <br> <br>
+
+    A revolutionary concept for the collections of the Badisches Landesmuseum was developed in the run-up to a general renovation of Karlsruhe Palace: visitors become users. For this purpose, the objects are made directly accessible in a digital catalogue and the admission ticket is replaced by a user card linked to a personal user account. <br> <br>
+
+    The heart of the new concept is the "Expothek": This new and unique format resembles a research laboratory and is intended to give visitors the opportunity to become active users of the museum. Originals can be displayed on presentation tables, and digital workplaces offer the opportunity to research the objects directly. Digital features and modern technologies such as 3D scanning and virtual reality also offer innovative ways to experience culture and history. The concept is being tested for the first time in the new permanent exhibition Archaeology in Baden. <br> <br>
+
+    Join us and use our infrastructures to develop new ideas! A special extra: particularly exciting ideas can also be further developed or even implemented after the hackathon. Let's make the museum fun again! <br> <br>
+</div>
 
 {% for section in site.about %}
 <section class="section">
