Remove hacktival shapes, use red color accents

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: normal
 title: About hackathon x
-color: "#ff5b00"
+color: "#E30613"
 bg_url: "/assets/images/shapes/Form1_orange_transparent.svg"
 bg_position: "80vw 10vh"
 ---
