--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 layout: small
 title: FAQ
-color: "#ff5b00"
+color: "#E30613"
 bg_url: "/assets/images/shapes/Form1_orange_transparent.svg"
 bg_position: "70vw 30vh"
 ---
