--- a/jury.html
+++ b/jury.html
@@ -1,7 +1,7 @@
 ---
 layout: normal
 title: Jury
-color: "#00ff00"
+color: "#E30613"
 bg_url: "/assets/images/shapes/Form3_grün_transparent.svg"
 bg_position: "-35vh 70vh"
 ---
