--- a/location.html
+++ b/location.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: Location
-color: "#00ff00"
+color: "#E30613"
 bg_url: "/assets/images/shapes/Form1_grün_transparent.svg"
 bg_position: "75vw -25vh"
 ---
