Update background on all pages (add red X)

--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 layout: normal
 title: About hackathon x
 color: "#E30613"
-bg_url: "/assets/images/shapes/Form1_orange_transparent.svg"
-bg_position: "80vw 10vh"
+bg_url: "/assets/images/X.svg"
+bg_position: "80vw 20vh"
 ---
 <header class="content-siteheader">
 	<h1>{{ page.title }}</h1>
