--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 layout: normal
 title: hackathon x
 color: "#ff00b6"
-bg_url: "/assets/images/shapes/alleFormen_pink_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "center center"
+bg_size: "50% 50%"
 ---
 <section class="box">
 	<header class="content-header">
