--- a/jury.html
+++ b/jury.html
@@ -2,7 +2,7 @@
 layout: normal
 title: Jury
 color: "#E30613"
-bg_url: "/assets/images/shapes/Form3_grün_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "-35vh 70vh"
 ---
 <header class="content-siteheader">
