--- a/location.html
+++ b/location.html
@@ -2,7 +2,7 @@
 layout: base
 title: Location
 color: "#E30613"
-bg_url: "/assets/images/shapes/Form1_grün_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "75vw -25vh"
 ---
 <div class="container colored">
