--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 layout: normal
 title: Schedule
 color: "#ff5b00"
-bg_url: "/assets/images/shapes/Form3_orange_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "-20vw 10vh"
 ---
 <header class="content-siteheader">
