--- a/sponsors.html
+++ b/sponsors.html
@@ -2,7 +2,7 @@
 layout: normal
 title: Sponsors
 color: "#ff00b6"
-bg_url: "/assets/images/shapes/Form2_pink_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "-10vw -40vh"
 ---
 
