--- a/categories.html
+++ b/categories.html
@@ -2,7 +2,7 @@
 layout: normal
 title: Categories
 color: "#ff00b6"
-bg_url: "/assets/images/shapes/Form2_pink_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "70vw -40vh"
 ---
 <header class="content-siteheader">
