--- a/faq.html
+++ b/faq.html
@@ -2,7 +2,7 @@
 layout: small
 title: FAQ
 color: "#E30613"
-bg_url: "/assets/images/shapes/Form1_orange_transparent.svg"
+bg_url: "/assets/images/X.svg"
 bg_position: "70vw 30vh"
 ---
 <header class="content-siteheader">
