--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@ bg_position: "80vw 20vh"
 </header>
 
 <div class="section-text colored">
-    hackathon x is part of the Creative Collections project, which is dedicated to opening the Badisches Landesmuseum to participation by its users and developing new digital concepts. Since the museum visit should also be entertaining and fun, the focus of the hackathon is on gaming in the museum. <br> <br>
+    hackathon x is part of the Creative Collections project, which is dedicated to opening the Badisches Landesmuseum to participation by its users and developing new digital concepts. It is organized in close cooperation with the student organization Hack & Söhne. Since the museum visit should also be entertaining and fun, the focus of the hackathon is on gaming in the museum. <br> <br>
 
-    A revolutionary concept for the collections of the Badisches Landesmuseum was developed in the run-up to a general renovation of Karlsruhe Palace: visitors become users. For this purpose, the objects are made directly accessible in a digital catalogue and the admission ticket is replaced by a user card linked to a personal user account. <br> <br>
+    A revolutionary concept for the collections of the Badisches Landesmuseum was developed in the run-up to a general renovation of Karlsruhe Palace: visitors become active users of the museum. For this purpose, the objects are made accessible in a digital catalogue and the admission ticket is replaced by a user card linked to a personal user account. <br> <br>
 
-    The heart of the new concept is the "Expothek": This new and unique format resembles a research laboratory and is intended to give visitors the opportunity to become active users of the museum. Originals can be displayed on presentation tables, and digital workplaces offer the opportunity to research the objects directly. Digital features and modern technologies such as 3D scanning and virtual reality also offer innovative ways to experience culture and history. The concept is being tested for the first time in the new permanent exhibition Archaeology in Baden. <br> <br>
+    The unique heart of the new concept is the "Expothek", which resembles a research laboratory. Originals can be directly displayed on presentation tables, and digital workplaces offer the opportunity to research the objects. Digital features and modern technologies such as 3D scanning and virtual reality also offer innovative ways to experience culture and history. The concept is being tested for the first time in the new permanent exhibition “Archaeology in Baden”. <br> <br>
 
-    Join us and use our infrastructures to develop new ideas! A special extra: particularly exciting ideas can also be further developed or even implemented after the hackathon. Let's make the museum fun again! <br> <br>
+    Join us and become part of this special hackathon! A special extra: particularly exciting ideas can also be further developed or even implemented after the hackathon. Let's develop exciting new ideas! <br> <br>
 </div>
 
 {% for section in site.about %}
