Prettify about text and clean up assets

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
 layout: normal
-title: About hackathon x
+title: About
 color: "#E30613"
 bg_url: "/assets/images/X.svg"
 bg_position: "80vw 20vh"
@@ -8,16 +8,6 @@ bg_position: "80vw 20vh"
 <header class="content-siteheader">
 	<h1>{{ page.title }}</h1>
 </header>
-
-<div class="section-text colored">
-    hackathon x is part of the Creative Collections project, which is dedicated to opening the Badisches Landesmuseum to participation by its users and developing new digital concepts. It is organized in close cooperation with the student organization Hack & Söhne. Since the museum visit should also be entertaining and fun, the focus of the hackathon is on gaming in the museum. <br> <br>
-
-    A revolutionary concept for the collections of the Badisches Landesmuseum was developed in the run-up to a general renovation of Karlsruhe Palace: visitors become active users of the museum. For this purpose, the objects are made accessible in a digital catalogue and the admission ticket is replaced by a user card linked to a personal user account. <br> <br>
-
-    The unique heart of the new concept is the "Expothek", which resembles a research laboratory. Originals can be directly displayed on presentation tables, and digital workplaces offer the opportunity to research the objects. Digital features and modern technologies such as 3D scanning and virtual reality also offer innovative ways to experience culture and history. The concept is being tested for the first time in the new permanent exhibition “Archaeology in Baden”. <br> <br>
-
-    Join us and become part of this special hackathon! A special extra: particularly exciting ideas can also be further developed or even implemented after the hackathon. Let's develop exciting new ideas! <br> <br>
-</div>
 
 {% for section in site.about %}
 <section class="section">
