Add copyright to About images

--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@ bg_position: "80vw 20vh"
 		{% if section.image_caption %}
 			<figcaption>{{ section.image_caption }}</figcaption>
 		{% endif %}
+		<footer><small> {{section.image-copyright}} </small></footer>
 	</figure> 
 </section>
 {% endfor %}
