--- a/faq.html
+++ b/faq.html
@@ -20,5 +20,5 @@ bg_position: "70vw 30vh"
 
 <footer class="content-footer">
 	<strong>Didn't find what you're looking for?</strong><br>
-	<p><a class="accent-tc" href="mailto:{{ site.info_email }}" target="_top">{{ site.info_email }}</a></p>
+	<p><a class="accent-tc" href="mailto:{{ site.info_email_hs }}" target="_top">{{ site.info_email_hs }}</a> or <a class="accent-tc" href="mailto:{{ site.info_email_musx }}" target="_top">{{ site.info_email_musx }}</a></p>
 </footer>
