--- a/location.html
+++ b/location.html
@@ -8,13 +8,13 @@ bg_position: "75vw -25vh"
 <div class="container colored">
 	<div id="map" class="map"></div>
 
-	<p>The hackathon is held in the <a href="https://www.landesmuseum.de/creative/museum-x" target="_blank" rel="noopener">museum x</a>.</p>
+	<p>hackathon x takes place in the recently opened <a href="https://www.landesmuseum.de/creative/museum-x" target="_blank" rel="noopener">museum x</a> of the Badisches Landesmuseum. As an open space it serves as a platform to discuss the analogue and digital future of museums with all who are interested - the perfect place for a hackathon!</p>
 
 	<h3 class="accent-tc">Address</h3>
 	<address>
-        Badisches Landesmuseum - Museum am Markt <br>
-        Karl-Friedrich-Straße <br>
-        76133 Karlsruhe <br>
+        Museum beim Markt <br>
+		Karl-Friedrich-Str. 6 <br>
+		76133 Karlsruhe <br>
         Germany
 	</address>
 
