--- a/jury.html
+++ b/jury.html
@@ -19,12 +19,14 @@ bg_position: "-35vh 70vh"
 
 		{{ jury.content | markdownify }}
 	</div>
+	{% if jury.image %}
 	<div class="section-image">
         <figure>
 		    <img src="{{ jury.image }}" alt="{{ jury.name }} Image" />
             <footer><small> {{jury.image-copyright}} </small></footer>
         </figure>
 	</div>
+	{% endif %}
 </div>
 {% endunless %}
 {% endfor %}
