New content, minor fixes, jury layout change

--- a/jury.html
+++ b/jury.html
@@ -12,7 +12,7 @@ bg_position: "-35vh 70vh"
 {% for jury in site.juries %}
 {% unless jury.hidden %}
 <div class="section jury">
-	<div class="section-text">
+	<div class="section-text colored">
 		<h4 class="accent-tc">{{ jury.name }}</h4>
         <div class="jury-subtitle"><i>{{ jury.subtitle1 }}</i></div>
         <div class="jury-subtitle"><i>{{ jury.subtitle2 }}</i></div>
