Add museum x flyer

--- a/location.html
+++ b/location.html
@@ -8,7 +8,7 @@ bg_position: "75vw -25vh"
 <div class="container colored">
 	<div id="map" class="map"></div>
 
-	<p>hackathon x takes place in the recently opened <a href="https://www.landesmuseum.de/creative/museum-x" target="_blank" rel="noopener">museum x</a> of the Badisches Landesmuseum. As an open space it serves as a platform to discuss the analogue and digital future of museums with all who are interested - the perfect place for a hackathon!</p>
+    <p>hackathon x takes place in the recently opened <a href="https://www.landesmuseum.de/creative/museum-x" target="_blank" rel="noopener">museum x</a> of the Badisches Landesmuseum. As an open space it serves as a platform to discuss the analogue and digital future of museums with all who are interested - the perfect place for a hackathon! <a href="https://hackathonx.de/museumx.pdf">Click here for more information about the museum x.</a></p>
 
 	<h3 class="accent-tc">Address</h3>
 	<address>
